# DependencyInversion_pattern_cpp

./: CMakeLists.txt  di_approach.cpp  plain.cpp  readme.md
include/: electric_power_switch.h  electric_power_switch_plain.h  fan.h  light_bulb.h  light_bulb_plain.h  switchable.h
